# Book-management

./: CMakeLists.txt  addbox.h  addbox.ui  main.cpp  mainwindow.h  mainwindow.ui  purchasebox.ui
Forms/: addbox.ui  mainwindow.ui  purchasebox.ui
Headers/: purchasebox.h
Sources/: addbox.cpp  mainwindow.cpp  purchasebox.cpp
